--- a/MyProgressBar/res/layout/activity_main.xml
+++ b/MyProgressBar/res/layout/activity_main.xml
@@ -27,4 +27,15 @@
         android:layout_marginTop="35dp"
         android:text="Start"/>
 
+    <TextView
+        android:id="@+id/percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/progressBar1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:textColor="#007A00"
+        android:text="0%"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </RelativeLayout>
